--- a/merge.html
+++ b/merge.html
@@ -25,7 +25,9 @@
   <!-- Back Button -->
   <div class="max-w-3xl mx-auto mb-8">
     <a href="index.html" class="inline-flex items-center text-indigo-600 hover:text-indigo-800 font-medium text-sm">
-      <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/></svg>
+      <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+      </svg>
       Back to Dashboard
     </a>
   </div>
@@ -33,7 +35,7 @@
   <div class="max-w-3xl mx-auto" x-data="mergeTool()">
     <div class="text-center mb-12 fade-in">
       <h1 class="text-4xl font-bold text-gray-900 mb-2">Merge PDFs</h1>
-      <p class="text-lg text-gray-600">Seamlessly combine two PDFs with professional quality.</p>
+      <p class="text-lg text-gray-600">Combine two PDFs using your preferred engine.</p>
     </div>
 
     <!-- File 1 Upload -->
@@ -76,9 +78,24 @@
       </div>
     </div>
 
+    <!-- Merge Engine Dropdown -->
+    <div class="mb-6">
+      <label class="block text-sm font-medium text-gray-700 mb-2">Merge Engine</label>
+      <select x-model="library" class="w-full rounded-xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+        <option value="pypdf">pypdf – Modern & Recommended</option>
+        <option value="PyPDF2">PyPDF2 – Legacy</option>
+        <option value="pdfrw">pdfrw – Lightweight</option>
+        <option value="fitz">PyMuPDF (fitz) – Fast & Accurate</option>
+        <option value="PyPDF4">PyPDF4 – Fork</option>
+        <option value="PyPDF3">PyPDF3 – Fork</option>
+        <option value="pdfplumber">pdfplumber – Text-focused</option>
+      </select>
+    </div>
+
     <!-- Merge Button -->
     <button @click="upload" :disabled="uploading" class="w-full py-3 px-4 bg-indigo-600 text-white font-semibold rounded-xl shadow-md hover:bg-indigo-700 transition disabled:opacity-50">
-      Merge PDFs
+      <span x-show="!uploading">Merge PDFs</span>
+      <span x-show="uploading">Merging...</span>
     </button>
 
     <!-- Progress -->
@@ -100,8 +117,12 @@
   <script>
     function mergeTool() {
       return {
-        file1: null, file2: null, dragging1: false, dragging2: false,
-        uploading: false, progress: 0, downloadUrl: '',
+        file1: null, file2: null,
+        dragging1: false, dragging2: false,
+        library: 'pypdf',  // default
+        uploading: false,
+        progress: 0,
+        downloadUrl: '',
 
         handleFile1(e) { this.file1 = e.target.files[0]; },
         handleDrop1(e) { this.dragging1 = false; this.file1 = e.dataTransfer.files[0]; },
@@ -109,22 +130,36 @@
         handleDrop2(e) { this.dragging2 = false; this.file2 = e.dataTransfer.files[0]; },
 
         async upload() {
-          if (!this.file1 || !this.file2) return alert('Upload both files!');
-          this.uploading = true; this.progress = 0;
+          if (!this.file1 || !this.file2) return alert('Please upload both PDF files!');
+
+          this.uploading = true;
+          this.progress = 0;
+
           const formData = new FormData();
           formData.append('file_1', this.file1);
           formData.append('file_2', this.file2);
+          formData.append('library', this.library);  // ← sent to backend
 
-          const interval = setInterval(() => this.progress = Math.min(this.progress + 10, 90), 200);
+          const interval = setInterval(() => this.progress = Math.min(this.progress + 12, 90), 180);
 
           try {
-            const res = await fetch('https://pdf-tools-jmnh.onrender.com/merge', { method: 'POST', body: formData });
-            clearInterval(interval); this.progress = 100;
-            if (!res.ok) throw new Error(await res.text());
+            const res = await fetch('https://pdf-tools-jmnh.onrender.com/merge', {
+              method: 'POST',
+              body: formData
+            });
+
+            clearInterval(interval);
+            this.progress = 100;
+
+            if (!res.ok) {
+              const err = await res.text();
+              throw new Error(err || 'Merge failed');
+            }
+
             const blob = await res.blob();
             this.downloadUrl = URL.createObjectURL(blob);
           } catch (e) {
-            alert('Error: ' + e.message);
+            alert('Merge failed: ' + e.message);
           } finally {
             this.uploading = false;
           }
